# mcp-website-fetcher

./: .devcontainer.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .spellcheck.yml  Dockerfile  Makefile  README.md  pyproject.toml
.github/: .wordlist.txt
.github/workflows/: build.yml  linter.yml  spell.yml  update.yml
ci/: update_versions.sh
src/website_fetcher/: __init__.py  mcp.py
