[project]
name = "mcp-website-fetcher"
version = "0.0.1"
description = "MCP server implementation that provides a simple website fetching service"
dependencies = [
    "click",
    "mcp[cli]",
    "gitpython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/website_fetcher"]

[project.scripts]
website-fetcher = "website_fetcher:cli"

[tool.isort]
profile = "black"

[dependency-groups]
spell = [
    "pyspelling",
]
fmt = [
    "black",
    "isort",
    "pyink",
    "ruff",
]

[tool.tox]
env_list = ["3.12"]

[tool.tox.env.spell]
description = "Check spelling in the codebase"
dependency_groups = [
    "spell",
]
commands = [
    [
        "pyspelling",
        "-c",
        ".spellcheck.yml",
    ],
]

[tool.tox.env.fmt]
description = "Format the codebase"
dependency_groups = [
    "fmt",
]
commands = [
    [
        "black",
        ".",
    ],
    [
        "isort",
        ".",
    ],
    [
        "pyink",
        ".",
    ],
    [
        "ruff",
        "format",
    ],
]
